<resources>
    <string name="app_name">geometria</string>
    <string name="areas">ÁREAS</string>
    <string name="volumenes">VOLÚMENES</string>
    <string name="operacionesRealizadas">OPERACIONES REALIZADAS</string>
    <array name="Opciones">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/operacionesRealizadas</item>
    </array>
    <string name="cuadrado">CUADRADO</string>
    <string name="rectangulo">RECTÁNGULO</string>
    <string name="triangulo">TRIÁNGULO</string>
    <string name="circulo">CÍRCULO</string>
    <array name="OpcionesAreas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </array>
    <string name="esfera">ESFERA</string>
    <string name="cilindro">CILINDRO</string>
    <string name="cono">CONO</string>
    <string name="cubo">CUBO</string>
    <array name="OpcionesVolumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </array>
    <string name="numero">N°</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
    <string name="valorDelLado">Valor del lado :</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje_error_uno">Ingresó un valor invalido.</string>
    <string name="areaDelCuadrado">Área del cuadrado</string>
    <string name="areaDelRectangulo">Área del rectángulo</string>
    <string name="areaDelTriangulo">Área del triángulo</string>
    <string name="areaDelCirculo">Área del círculo</string>
    <string name="area">Área:</string>
    <string name="ok">Ok</string>
    <string name="lado">Lado</string>
    <string name="radio">Radio</string>
    <string name="valorBase">Valor de la base</string>
    <string name="valorAltura">Valor de la altura :</string>
    <string name="txtValorRadio">Valor del radio :</string>
    <string name="volumenDelCubo">Volumen del cubo</string>
    <string name="volumenDelCono">Volumen del cono</string>
    <string name="volumenDelCilindro">Volumen del cilindro</string>
    <string name="volumenDeLaEsfera">Volumen de la esfera</string>
    <string name="volumen">Volumen :</string>

</resources>
