<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtEsferaResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esfera"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.03">

        <TextView
            android:id="@+id/txtAreaEsferaResultado"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:text="@string/area"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtResultadoArea"
            android:layout_width="189dp"
            android:layout_height="27dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOkEsferaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="regresar"
        android:text="@string/ok"
        android:textAlignment="center" />

</LinearLayout>