<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rectangulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtValorBase"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.41"
            android:text="@string/valorBase"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtBase"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.40"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtValorAltura"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.41"
            android:text="@string/valorAltura"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.40"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calcularAreaRectangulo"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/borrar" />
    </LinearLayout>

</LinearLayout>